# order-processing-service/api/controllers/orderProcessingService.js
@@ -3,10 +3,10 @@ var Order = require('../domain/order');
 
 module.exports={
     createOrderForAirline:createOrderForAirline,
-    getOrderForAirline:getOrderForAirline,
-    updateOrderForAirline:updateOrderForAirline,
-    deleteOrderForAirline:deleteOrderForAirline,
-    getOrderById:getOrderById
+    getOrdersForAirline:getOrdersForAirline,
+    updateOrderWithOrderProcessId:updateOrderWithOrderProcessId,
+    getOrderWithOrderProcessId:getOrderWithOrderProcessId,
+    getAllOrdersWithStatus:getAllOrdersWithStatus
 }
 
 
@@ -14,14 +14,14 @@ module.exports={
 // post a  network
 function createOrderForAirline(req, res) {
    // var tokenId = req.headers.authorization;
-   // var userId = req.user.sub.split("|")[1];
+    var userId = "airlineUser";
     var traceId = "test";
     //var tenantId = req.user.aud;
-    //var carrierId = req.swagger.params.carrierId.value;
+    var carrierCode = req.swagger.params.carrierCode.value;
     //var userType= req.user[URL].userType;
     var bodyData = req.swagger.params.body.value;
    
-            (new Order(bodyData)).postOrder(traceId,carrierId,userId,
+            (new Order(bodyData)).createOrder(traceId,userId,carrierCode,
                 function (err, content) {
                     console.log('after save...'+content)
                     if (err) {
@@ -36,17 +36,17 @@ function createOrderForAirline(req, res) {
 
 
 
-        function updateOrderForAirline(req, res) {
-            var tokenId = req.headers.authorization;
-            var userId = req.user.sub.split("|")[1];
+        function updateOrderWithOrderProcessId(req, res) {
+         //   var tokenId = req.headers.authorization;
+            var userId = "airlineUser"
             var traceId = "test";
-            var tenantId = req.user.aud;
-            var carrierId = req.swagger.params.carrierId.value;
+         //   var tenantId = req.user.aud;
+         //   var carrierId = req.swagger.params.carrierId.value;
             //var userType= req.user[URL].userType;
-            var networkId = req.swagger.params.networkId.value;
+            var order_processing_id = req.swagger.params.order_processing_id.value;
             var bodyData = req.swagger.params.body.value;
            
-                    (new Order(bodyData)).updateOrderById(traceId,carrierId,networkId,
+                    (new Order(bodyData)).updateOrderById(traceId,order_processing_id,
                         function (err, content) {
                             console.log('after save...'+content)
                             if (err) {
@@ -59,17 +59,19 @@ function createOrderForAirline(req, res) {
                         });
                 }
 
-                function getOrderForAirline(req, res) {
+                function getOrdersForAirline(req, res) {
                 //    var tokenId = req.headers.authorization;
                 //    var userId = req.user.sub.split("|")[1];
                     var traceId = "test";
                 //    var tenantId = req.user.aud;
-                    var carrierId = req.swagger.params.carrierId.value;
+                    var carrierCode = req.swagger.params.carrierCode.value;
+                    
+
                     //var userType= req.user[URL].userType;
                   //  var networkId = req.swagger.params.networkId.value;
                    
                    
-                            (new Order()).findAllOrdersForAirline(traceId,carrierId,
+                            (new Order()).c(traceId,carrierCode,
                                 function (err, content) {
                                     console.log('after save...'+content)
                                     if (err) {
@@ -82,41 +84,18 @@ function createOrderForAirline(req, res) {
                                 });
                         }
 
-
-                        function updateOrderForAirline(req, res) {
-                            var tokenId = req.headers.authorization;
-                            var userId = req.user.sub.split("|")[1];
-                            var traceId = "test";
-                            var tenantId = req.user.aud;
-                            var carrierId = req.swagger.params.carrierId.value;
-                            //var userType= req.user[URL].userType;
-                            var networkId = req.swagger.params.networkId.value;
-                            var bodyData = req.swagger.params.body.value;
-                           
-                                    (new Order(bodyData)).updateOrderById(traceId,carrierId,networkId,
-                                        function (err, content) {
-                                            console.log('after save...'+content)
-                                            if (err) {
-                                                console.log("errrrrrrrrrrr")
-                                                res.send(JSON.stringify(err));
-                                                log.error("TraceId : %s, Error : %s", traceId, JSON.stringify(err));
-                                            } else {
-                                                res.json(content);
-                                            }
-                                        });
-                                }
                 
-                                function getOrderById(req, res) {
+                                function getOrderWithOrderProcessId(req, res) {
                                   //  var tokenId = req.headers.authorization;
                                  //   var userId = req.user.sub.split("|")[1];
                                     var traceId = "test";
                                   //  var tenantId = req.user.aud;
-                                    var carrierId = req.swagger.params.carrierId.value;
+                                   // var carrierId = req.swagger.params.carrierId.value;
                                     //var userType= req.user[URL].userType;
-                                    var networkId = req.swagger.params.networkId.value;
+                                    var order_processing_id = req.swagger.params.order_processing_id.value;
                                    
                                    
-                                            (new Order()).getOneOrder(traceId,carrierId,networkId,
+                                            (new Order()).getOneOrder(traceId,order_processing_id,
                                                 function (err, content) {
                                                     console.log('after save...'+content)
                                                     if (err) {
@@ -151,3 +130,28 @@ function createOrderForAirline(req, res) {
                                                             }
                                                         });
                                                 }
+
+                                                function getAllOrdersWithStatus(req, res) {
+                                                    //    var tokenId = req.headers.authorization;
+                                                    //    var userId = req.user.sub.split("|")[1];
+                                                        var traceId = "test";
+                                                    //    var tenantId = req.user.aud;
+                                                        var status = req.swagger.params.status.value;
+                                                        var boardingPoint = req.swagger.params.boardingPoint.value;
+                                                        //var userType= req.user[URL].userType;
+                                                      //  var networkId = req.swagger.params.networkId.value;
+                                                       
+                                                       
+                                                                (new Order()).findAllOrdersWithStatus(traceId,status,boardingPoint,
+                                                                    function (err, content) {
+                                                                        console.log('after save...'+content)
+                                                                        if (err) {
+                                                                            console.log("errrrrrrrrrrr")
+                                                                            res.send(JSON.stringify(err));
+                                                                            log.error("TraceId : %s, Error : %s", traceId, JSON.stringify(err));
+                                                                        } else {
+                                                                            res.json(content);
+                                                                        }
+                                                                    });
+                                                            }
+                                                            
