# order-processing-service/api/domain/order.js
@@ -3,7 +3,7 @@ var Q = require('q');
 var _ = require('lodash'),
     dbconfig = require('../../config/db'),
     dbUtils = require('../helpers/db/db'),
-    NetworkMetadata = require('../helpers/transformer/orderMetadata'),
+    OrderMetadata = require('../helpers/transformer/orderMetadata'),
     Logger = require('bunyan');
 var request = require("request");
 var moment = require('moment');
@@ -38,25 +38,25 @@ verification.prototype.getData = function () {
 
 
 // create new order for airline
-order.prototype.postorder=(traceId, airlineId,userId, cb) => {
+order.prototype.createOrder=(traceId,userId,carrierCode, cb) => {
     order.prototype.data['createdDTS'] = moment.utc().format();
     order.prototype.data['updatedDTS'] = moment.utc().format();
-    var orderMetadata = new NetworkMetadata(order.prototype.data).getData();
-    orderMetadata.orderNameSpace="none";
+    var orderMetadata = new OrderMetadata(order.prototype.data).getData();
+    
     // orderMetadata.expringDate=new Date(new Date().getTime()+(180*24*60*60*1000));
     // orderMetadata.listedDate=new Date();
-    orderMetadata.createdBy=userId;
-    orderMetadata.airlineId=airlineId;
+    orderMetadata.orderedBy=userId;
+    orderMetadata.carrierCode=carrierCode;
+   // orderMetadata.airlineId=airlineId;
     var response = {
         message: "Cannot create the order.",
         statusCode: 404,
         errorCode: "code1"
     }
-     rdb.table("order").insert(orderMetadata).run().then(function (orderData) {
+     rdb.table("cfp_order_processing_tb").insert(orderMetadata).run().then(function (orderData) {
          console.log(JSON.stringify(orderData.generated_keys[0]));
-             var resObj = { "status": "200", "data": { "message": "Your order  info published and the order id is -> "+ orderData.generated_keys[0] } }
+             var resObj = { "status": "200", "data": { "message": "Your order has been submitted and the order id is -> "+ orderData.generated_keys[0] } }
                     cb(null,resObj);
-         
                 }).catch(function (err) {
                     console.log("first err catch")
                     log.error("TraceId : %s, Error : %s", traceId, JSON.stringify(err));
@@ -66,12 +66,12 @@ order.prototype.postorder=(traceId, airlineId,userId, cb) => {
         }
 
 // update order for owner
-order.prototype.updateNetworkById =(traceId,airlineId, orderId , cb) => {
+order.prototype.updateOrderById =(traceId, orderId , cb) => {
     order.prototype.data['updatedDTS'] = moment.utc().format();
-    var orderMetadata = new NetworkMetadata(order.prototype.data).getData();
+    var orderMetadata = new OrderMetadata(order.prototype.data).getData();
    
-     rdb.table("order").get(orderId).update(orderMetadata).run().then(function(orderData) {
-             var resObj = { "status": "200", "data": { "message": "Your order info is updated"} }
+     rdb.table("cfp_order_processing_tb").get(orderId).update(orderMetadata).run().then(function(orderData) {
+             var resObj = { "status": "200", "data": { "message": "OrderID : "+orderId+ " Order info is updated"} }
                     cb(null,resObj);
          
                 }).catch(function (err) {
@@ -84,13 +84,13 @@ order.prototype.updateNetworkById =(traceId,airlineId, orderId , cb) => {
 
 
 // delete order
-order.prototype.deleteorder= ( traceId,airlineId,orderId, cb) => {
+order.prototype.deleteorder= ( traceId,orderId, cb) => {
     var response = {
         message: "Cannot Delete the order.",
         statusCode: 404,
         errorCode: "code1"
     }
-    rdb.table("order").get(orderId).delete().run().then(function (result) {
+    rdb.table("cfp_order_processing_tb").get(orderId).delete().run().then(function (result) {
         cb(null, result);
     }).catch(function (err) {
         log.error("TraceId : %s, Error : %s", "traceId", JSON.stringify(err));
@@ -100,7 +100,7 @@ order.prototype.deleteorder= ( traceId,airlineId,orderId, cb) => {
 }
 
 // list all order for platform admin level
-order.prototype.findAllNetworksForCarrier = (traceId,airlineId,cb) => {
+order.prototype.findAllOrdersForAirline = (traceId,carrierCode,cb) => {
     var response = {
         message: "Cannot Get all order issue with db.",
         statusCode: 404,
@@ -109,8 +109,8 @@ order.prototype.findAllNetworksForCarrier = (traceId,airlineId,cb) => {
    // var startfrom=startfrom?startfrom:0
 
         
-        rdb.table("order").filter({"airlineId":airlineId}).run().then(function (result) {
-            rdb.table("order").count().run().then(function (result2) {
+        rdb.table("cfp_order_processing_tb").filter({"carrierCode":carrierCode}).run().then(function (result) {
+            rdb.table("cfp_order_processing_tb").filter({"carrierCode":carrierCode}).count().run().then(function (result2) {
             if (result.length > 0) {
                                     var resObj = { "status": "200", "data": result,"count":result2}
                                     cb(null, resObj);
@@ -137,8 +137,8 @@ order.prototype.findAllNetworksForCarrier = (traceId,airlineId,cb) => {
 
 
 // get order 
-order.prototype.getOneorder= (traceId,airlineId, orderId, cb) => {
-    rdb.table("order").get(orderId).run().then(function (result) {
+order.prototype.getOneOrder= (traceId,orderId, cb) => {
+    rdb.table("cfp_order_processing_tb").get(orderId).run().then(function (result) {
 
         if (result.length > 0) {
                         var resObj = { "status": "200", "data": result }
@@ -156,7 +156,41 @@ order.prototype.getOneorder= (traceId,airlineId, orderId, cb) => {
 }
 
 
+// list all order for platform admin level
+order.prototype.findAllOrdersWithStatus = (traceId,status,boardingPoint,cb) => {
+    var response = {
+        message: "Cannot Get all order issue with db.",
+        statusCode: 404,
+        errorCode: "code1"
+    }
+   // var startfrom=startfrom?startfrom:0
 
+        
+        rdb.table("cfp_order_processing_tb").filter({"boardingPoint":boardingPoint,"orderStatus":status}).run().then(function (result) {
+            rdb.table("cfp_order_processing_tb").filter({"boardingPoint":boardingPoint,"orderStatus":status}).count().run().then(function (result2) {
+            if (result.length > 0) {
+                                    var resObj = { "status": "200", "data": result,"count":result2}
+                                    cb(null, resObj);
+                } else {
+                    var resObj = { "status": "200", "data": result ,"count":result2}
+                    cb(null, resObj);
+                }
+
+                }).catch(function (err) {
+                    var resObj = { "status": "200", "data":  result,"count":"count db error" }
+                        cb(null, resObj);
+                })
+            
+            
+            
+           
+        }).catch(function (err) {
+            log.error("TraceId : %s, Error : %s", traceId, JSON.stringify(err));
+            
+            cb(response);
+        });
+   
+}
 
 
 
